<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.danielle.myapplicationnogeenkeer.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bronnen"
        android:name="com.danielle.myapplicationnogeenkeer.ui.BronnenOverzichtFragment"
        android:label="@string/page_bronnen"
        tools:layout="@layout/fragment_bronnen" />

    <fragment
        android:id="@+id/navigation_geschiedenis"
        android:name="com.danielle.myapplicationnogeenkeer.ui.GeschiedenisFragment"
        android:label="@string/title_geschiedenis"
        tools:layout="@layout/fragment_geschiedenis" />

    <fragment
        android:id="@+id/navigation_instellingen"
        android:name="com.danielle.myapplicationnogeenkeer.ui.InstellingenFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_instellingen" />
</navigation>