<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BronnenOverzichtFragment">

    <TextView
        android:id="@+id/title_bronnen"
        android:layout_width="255dp"
        android:layout_height="76dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="95dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title_bronnen"
        android:textAlignment="center"
        android:textColor="@color/ada_green"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200px"
        android:layout_height="200px"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_ada" />

    <Button
        android:id="@+id/button_boeken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:width="241dp"
        android:height="65dp"
        android:backgroundTint="@color/ada_blue"
        android:text="@string/boeken"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:viewportWidth="241"
        android:viewportHeight="65"
        app:cornerRadius="20px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bronnen" />

    <Button
        android:id="@+id/button_online_bronnen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:width="241dp"
        android:height="65dp"
        android:backgroundTint="@color/ada_blue"
        android:text="@string/online_bronnen"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:viewportWidth="241"
        android:viewportHeight="65"
        app:cornerRadius="20px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_boeken" />

    <Button
        android:id="@+id/button_opgeslagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:width="241dp"
        android:height="65dp"
        android:backgroundTint="@color/ada_blue"
        android:text="@string/opgeslagen"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:viewportWidth="241"
        android:viewportHeight="65"
        app:cornerRadius="20px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_online_bronnen" />
</androidx.constraintlayout.widget.ConstraintLayout>