<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="340dp"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/txt_title_book"
        android:layout_width="320dp"
        android:layout_height="22dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/boek_titel"
        android:textColor="@color/ada_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_leen_dagen"
        android:layout_width="167dp"
        android:layout_height="19dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/leen_dagen"
        android:textColor="@color/ada_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_book" />

    <Button
        android:id="@+id/button"
        android:layout_width="137dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/white"
        android:text="@string/verlengen"
        android:textAllCaps="false"
        android:textColor="@color/ada_blue"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_leen_dagen"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_book" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/ada_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>