<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_maak_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="241dp"
        android:height="65dp"
        android:backgroundTint="@color/ada_blue"
        android:onClick="Login"
        android:text="@string/maak_account"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:viewportWidth="241"
        android:viewportHeight="65"
        app:cornerRadius="20px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick"
        tools:layout_editor_absoluteY="609dp" />

    <TextView
        android:id="@+id/title_inloggen"
        android:layout_width="255dp"
        android:layout_height="76dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title_account_aanmaken"
        android:textAlignment="center"
        android:textColor="@color/ada_green"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtNaam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/naam"
        android:textColor="@color/ada_blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_inloggen" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="@string/email"
        android:textColor="@color/ada_blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="265dp" />

    <EditText
        android:id="@+id/input_acc_naam"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:background="@drawable/inputfield"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:inputType="textPersonName"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/ada_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNaam"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/input_acc_email"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:background="@drawable/inputfield"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:inputType="textPersonName"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/ada_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/input_acc_studentnr"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:background="@drawable/inputfield"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:inputType="textPersonName"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/ada_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_studentnummer"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txt_studentnummer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="@string/studentnummer"
        android:textColor="@color/ada_blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="341dp" />

    <TextView
        android:id="@+id/txt_wachtwoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="@string/wachtwoord"
        android:textColor="@color/ada_blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="417dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200px"
        android:layout_height="200px"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_ada" />

    <EditText
        android:id="@+id/input_acc_wachtwoord"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:background="@drawable/inputfield"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_wachtwoord" />

</androidx.constraintlayout.widget.ConstraintLayout>